--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -34,13 +34,11 @@ jobs:
         run: |
           VERSION=${{ github.ref_name }}
           VERSION=${VERSION#v}
-          # Aktuelles Datum im ISO-Format (UTC)
           TIMESTAMP=$(date -u +"%Y-%m-%dT%H:%M:%SZ")
           
           cd bin/publish
           
-          # HIER WAR DER FEHLER: "timestamp" hat gefehlt!
-          # Wir fügen es jetzt hinzu.
+          # Meta.json für JPRM und Jellyfin erstellen
           cat <<EOF > meta.json
           {
             "name": "ABR HLS Cinema",
@@ -56,7 +54,16 @@ jobs:
           }
           EOF
           
+          # Zip erstellen
           zip -r ../../Jellyfin.ABRHls.zip .
+
+      # --- NEU: Lädt die ZIP-Datei direkt in die Release-Liste hoch ---
+      - name: Upload Release Asset
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: Jellyfin.ABRHls.zip
+      # ----------------------------------------------------------------
           
       - name: Setup JPRM
         run: |
