--- a/src/Jellyfin.ABRHLS.csproj
+++ b/src/Jellyfin.ABRHLS.csproj
@@ -8,11 +8,17 @@
     <Version>2.6.0</Version>
     <LangVersion>12.0</LangVersion>
   </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="Jellyfin.Server.Common" Version="10.*" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="8.0.0" />
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Jellyfin.Controller" Version="10.9.0" />
+    <PackageReference Include="Jellyfin.Model" Version="10.9.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+
   <ItemGroup>
     <EmbeddedResource Include="web/abr-player.html" LogicalName="web/abr-player.html" />
     <EmbeddedResource Include="web/abr-player.js" LogicalName="web/abr-player.js" />
