--- a/src/Jellyfin.ABRHLS.csproj
+++ b/src/Jellyfin.ABRHLS.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <RootNamespace>Jellyfin.ABRHls</RootNamespace>
     <AssemblyName>Jellyfin.ABRHls</AssemblyName>
-    <Version>2.7.0</Version>
+    <Version>2.8.0</Version>
     <LangVersion>12.0</LangVersion>
   </PropertyGroup>
 
@@ -20,7 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="web/abr-player.html" LogicalName="web/abr-player.html" />
-    <EmbeddedResource Include="web/abr-player.js" LogicalName="web/abr-player.js" />
+    <EmbeddedResource Include="web\abr-player.html" LogicalName="Jellyfin.ABRHls.web.abr-player.html" />
+    <EmbeddedResource Include="web\abr-player.js" LogicalName="Jellyfin.ABRHls.web.abr-player.js" />
+    <EmbeddedResource Include="Configuration\configPage.html" LogicalName="Jellyfin.ABRHls.Configuration.configPage.html" />
   </ItemGroup>
 </Project>
