--- a/src/Jellyfin.ABRHLS.csproj
+++ b/src/Jellyfin.ABRHLS.csproj
@@ -5,7 +5,7 @@
     <Nullable>enable</Nullable>
     <RootNamespace>Jellyfin.ABRHls</RootNamespace>
     <AssemblyName>Jellyfin.ABRHls</AssemblyName>
-    <Version>2.8.0</Version>
+    <Version>2.9.0</Version>
     <LangVersion>12.0</LangVersion>
   </PropertyGroup>
 
@@ -14,14 +14,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Jellyfin.Controller" Version="10.9.0" />
-    <PackageReference Include="Jellyfin.Model" Version="10.9.0" />
+    <PackageReference Include="Jellyfin.Controller" Version="10.10.3" />
+    <PackageReference Include="Jellyfin.Model" Version="10.10.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="web\abr-player.html" LogicalName="Jellyfin.ABRHls.web.abr-player.html" />
-    <EmbeddedResource Include="web\abr-player.js" LogicalName="Jellyfin.ABRHls.web.abr-player.js" />
-    <EmbeddedResource Include="Configuration\configPage.html" LogicalName="Jellyfin.ABRHls.Configuration.configPage.html" />
+    <EmbeddedResource Include="web\**" />
+    <EmbeddedResource Include="Configuration\**" />
   </ItemGroup>
 </Project>
